	(epackage-lint-extra-file): New.
	(epackage-lint-extra-buffer): New.
	(epackage-lint-extra-delimiter-string): New.
	(epackage-lint-extra-buffer-run-lm): New.
	(epackage-with-checkdoc-buffer): New.
	(epackage-lint-extra-buffer-run-checkdoc): New.
	(epackage-lint-extra-buffer-run-other): New.
	(epackage-buffer-remove-empty-lines): New.
	(epackage-lint-extra-buffer-checkdoc-collect-data): New.

2011-12-27 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-package-name-valid-p):
	Correct parens.
	(epackage-batch-devel-compose-package-dir): New.

2011-12-23 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-with-case-fold-search): New.
	(epackage-package-name-library-p): New.
	(epackage-package-name-valid-p): Use `epackage-with-case-fold-search'.
	(epackage-sources-list-info-pkg-list): Use
	`epackage-with-case-fold-search'.
	(epackage-require-git): Improve error message.
	(epackage--layout-mapping): Add 3rd parameter.
	(epackage-pkg-lint-dir-structure): Treat library packages
	differently.
	(epackage-sources-list-and-repositories-sync): Use
	`epackage-warn'.
	(epackage-combine-files): Use `epackage-warn'.

2011-12-21 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-date-to-iso): Tighten US format.
	Add YYYYMMDD support.

	* README: untabify.
	(Important files::AUTHORS): adjust.

2011-12-17 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-install): New.
	(epackage-devel-compose-package-dir): Rewrite. Modular.
	(epackage-autoload-create-on-directory): Return files.
	(epackage-nconc): New.
	(epackage--layout-template-info): Fix typo.

2011-12-16 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-loaddefs): Support
	ignore file.
	(epackage-devel-generate-compile-main): Support ignore file.
	(epackage-devel-generate-examples): Add preliminary ignore
	file support.

2011-12-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-erase-buffer): New.